--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
-
+.products {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    width: 200px;
+}
