--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.App {
+    margin: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+
 .products {
     display: grid;
     grid-template-columns: 1fr 1fr;
